--- a/pages/test.html
+++ b/pages/test.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <title>upload</title>
-</head>
+<html>
 <body>
-<form action="http://localhost:8081" method="post" enctype="multipart/form-data">
-  <p><input type="text" name="text1" value="text default">
-  <p><input type="text" name="text2" value="a&#x03C9;b">
-  <p><input type="file" name="file1">
-  <p><button type="submit">Submit</button>
-</form>
+   <form enctype = "multipart/form-data"
+                     action = "save_file.py" method = "post">
+   <p>File: <input type = "file" name = "filename" /></p>
+   <p><input type = "submit" value = "Upload" /></p>
+   </form>
 </body>
 </html>
