updated cgi to properly handle cgi path+extension, some POST methods tweaks so it works smoothly for the client no matter the test, updated some files in /pages

--- a/pages/index.html
+++ b/pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
+    <title>Webserver</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <style>
         html, body {
@@ -196,7 +196,7 @@ form input[type="submit"]:hover {
       </div>
       <div class="countdown">
           <a href="/image.jpeg">See me naked</a>
-          <a href="/test.html">See my test page</a>
+          <a href="/upload.html">See my test page</a>
       </div>
       <script>
           $(document).ready(function(){
