--- a/pages/upload.html
+++ b/pages/upload.html
@@ -1,6 +1,6 @@
 <html>
 	<body>
-		<form enctype="multipart/form-data" action="/echo.txt" method="post">
+		<form enctype="multipart/form-data" action="../webserv_cgi" method="post">
 		<p>File: <input type="file" name="filename" /></p>
 		<p><input type="submit" value="Upload" name=action/></p>
 		</form>
